build/log/idf_py_stdout_output_10218
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/ynghia/CODE/IDF/vinfast/build/bootloader/esp-idf/esptool_py && /home/ynghia/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/ynghia/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ynghia/CODE/IDF/vinfast/build/bootloader/bootloader.bin
Bootloader binary size 0x6870 bytes. 0x790 bytes (7%) free.
[2/8] Building C object esp-idf/app_wifi/CMakeFiles/__idf_app_wifi.dir/app_wifi.c.obj
FAILED: esp-idf/app_wifi/CMakeFiles/__idf_app_wifi.dir/app_wifi.c.obj 
/home/ynghia/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.4-52-g978d574e5e-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../components/app_wifi/include -I/home/ynghia/esp/esp-idf/components/newlib/platform_include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/ynghia/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/ynghia/esp/esp-idf/components/heap/include -I/home/ynghia/esp/esp-idf/components/log/include -I/home/ynghia/esp/esp-idf/components/soc/include -I/home/ynghia/esp/esp-idf/components/soc/esp32 -I/home/ynghia/esp/esp-idf/components/soc/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/include -I/home/ynghia/esp/esp-idf/components/hal/platform_port/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include/esp32 -I/home/ynghia/esp/esp-idf/components/esp_rom/esp32 -I/home/ynghia/esp/esp-idf/components/esp_common/include -I/home/ynghia/esp/esp-idf/components/esp_system/include -I/home/ynghia/esp/esp-idf/components/esp_system/port/soc -I/home/ynghia/esp/esp-idf/components/esp_system/port/include/private -I/home/ynghia/esp/esp-idf/components/xtensa/include -I/home/ynghia/esp/esp-idf/components/xtensa/esp32/include -I/home/ynghia/esp/esp-idf/components/lwip/include -I/home/ynghia/esp/esp-idf/components/lwip/include/apps -I/home/ynghia/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ynghia/esp/esp-idf/components/lwip/lwip/src/include -I/home/ynghia/esp/esp-idf/components/lwip/port/include -I/home/ynghia/esp/esp-idf/components/lwip/port/freertos/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ynghia/esp/esp-idf/components/esp_event/include -I/home/ynghia/esp/esp-idf/components/esp_wifi/include -I/home/ynghia/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/ynghia/esp/esp-idf/components/esp_phy/include -I/home/ynghia/esp/esp-idf/components/esp_phy/esp32/include -I/home/ynghia/esp/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/ynghia/CODE/IDF/vinfast=. -fmacro-prefix-map=/home/ynghia/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/app_wifi/CMakeFiles/__idf_app_wifi.dir/app_wifi.c.obj -MF esp-idf/app_wifi/CMakeFiles/__idf_app_wifi.dir/app_wifi.c.obj.d -o esp-idf/app_wifi/CMakeFiles/__idf_app_wifi.dir/app_wifi.c.obj   -c ../components/app_wifi/app_wifi.c
../components/app_wifi/app_wifi.c: In function 'event_handler':
../components/app_wifi/app_wifi.c:24:13: error: 's_retry_num' undeclared (first use in this function)
   24 |         if (s_retry_num < EXAMPLE_ESP_MAXIMUM_RETRY)
      |             ^~~~~~~~~~~
../components/app_wifi/app_wifi.c:24:13: note: each undeclared identifier is reported only once for each function it appears in
../components/app_wifi/app_wifi.c:24:27: error: 'EXAMPLE_ESP_MAXIMUM_RETRY' undeclared (first use in this function)
   24 |         if (s_retry_num < EXAMPLE_ESP_MAXIMUM_RETRY)
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ../components/app_wifi/app_wifi.c:7:
../components/app_wifi/app_wifi.c:28:22: error: 'TAG' undeclared (first use in this function)
   28 |             ESP_LOGI(TAG, "retry to connect to the AP");
      |                      ^~~
/home/ynghia/esp/esp-idf/components/log/include/esp_log.h:410:81: note: in definition of macro 'ESP_LOG_LEVEL'
  410 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                 ^~~
/home/ynghia/esp/esp-idf/components/log/include/esp_log.h:342:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  342 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:28:13: note: in expansion of macro 'ESP_LOGI'
   28 |             ESP_LOGI(TAG, "retry to connect to the AP");
      |             ^~~~~~~~
../components/app_wifi/app_wifi.c:32:32: error: 's_wifi_event_group' undeclared (first use in this function)
   32 |             xEventGroupSetBits(s_wifi_event_group, WIFI_FAIL_BIT);
      |                                ^~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:32:52: error: 'WIFI_FAIL_BIT' undeclared (first use in this function)
   32 |             xEventGroupSetBits(s_wifi_event_group, WIFI_FAIL_BIT);
      |                                                    ^~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:41:48: error: 'WIFI_CONNECTED_BIT' undeclared (first use in this function)
   41 |         xEventGroupSetBits(s_wifi_event_group, WIFI_CONNECTED_BIT);
      |                                                ^~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c: In function 'init_wifi':
../components/app_wifi/app_wifi.c:46:5: error: 's_wifi_event_group' undeclared (first use in this function)
   46 |     s_wifi_event_group = xEventGroupCreate();
      |     ^~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:72:35: error: 'ESP_WIFI_SCAN_AUTH_MODE_THRESHOLD' undeclared (first use in this function)
   72 |             .threshold.authmode = ESP_WIFI_SCAN_AUTH_MODE_THRESHOLD,
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:73:28: error: 'ESP_WIFI_SAE_MODE' undeclared (first use in this function)
   73 |             .sae_pwe_h2e = ESP_WIFI_SAE_MODE,
      |                            ^~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:74:35: error: 'EXAMPLE_H2E_IDENTIFIER' undeclared (first use in this function)
   74 |             .sae_h2e_identifier = EXAMPLE_H2E_IDENTIFIER,
      |                                   ^~~~~~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:81:14: error: 'TAG' undeclared (first use in this function)
   81 |     ESP_LOGI(TAG, "wifi_init_sta finished.");
      |              ^~~
/home/ynghia/esp/esp-idf/components/log/include/esp_log.h:410:81: note: in definition of macro 'ESP_LOG_LEVEL'
  410 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                 ^~~
/home/ynghia/esp/esp-idf/components/log/include/esp_log.h:342:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  342 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:81:5: note: in expansion of macro 'ESP_LOGI'
   81 |     ESP_LOGI(TAG, "wifi_init_sta finished.");
      |     ^~~~~~~~
../components/app_wifi/app_wifi.c:86:64: error: 'WIFI_CONNECTED_BIT' undeclared (first use in this function)
   86 |     EventBits_t bits = xEventGroupWaitBits(s_wifi_event_group, WIFI_CONNECTED_BIT | WIFI_FAIL_BIT,
      |                                                                ^~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:86:85: error: 'WIFI_FAIL_BIT' undeclared (first use in this function)
   86 |     EventBits_t bits = xEventGroupWaitBits(s_wifi_event_group, WIFI_CONNECTED_BIT | WIFI_FAIL_BIT,
      |                                                                                     ^~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
